Fix styling (spacing)

--- a/static/style.css
+++ b/static/style.css
@@ -47,6 +47,11 @@ h1 {
     padding: 10px;
 }
 
+.thresholdfield {
+    padding-top: 10px;
+    display: block;
+}
+
 .moveset_button {
     max-width: 35%;
     min-width: 25%;
